# tinyrenderer

./: CMakeLists.txt  framebuffer.tga  geometry.h  main.cpp  main2.cpp  model.cpp  model.h  our_gl.cpp  our_gl.h  output.tga  tgaimage.cpp  tgaimage.h
keepsake_images/: demon_just_lines.tga  depth_projected_corrected.tga  diablo3_model_with_faces_fixed.tga  even_weirder_sparseness.tga  framebuffer_shaded_first_result.tga  good_triangles.tga  little_bunny.tga  model_matrices_back.tga  model_matrices_good.tga  model_matrices_just_hand.tga  model_matrices_weirdly_rotated.tga  model_painters_alg.tga  model_projected_gradient.tga  model_with_faces.tga  model_with_faces_fixed.tga  model_with_faces_full.tga  model_with_faces_remove_small_fixed_random_colors.tga  model_with_faces_what_happened.tga  random_lines.tga  slightly_wrong_vertices.tga  super_wrong.tga  triangle_with_interpolation.tga  what_is_going_on.tga  wrong_vertices.tga
notes/: barycentric_coordinates_notes.txt
